--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -19,27 +19,23 @@
         
             <section>
                 <div class="title-bar">
-                    <h3>Viewing {{conditions.length}} Conditions</h3>
+                    <h3>Viewing {{tableParams.total()}} of {{conditions.length}} Conditions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
-                                <select class="form-control">
-                                    <option>10</option>
-                                    <option>25</option>
-                                    <option>50</option>
-                                </select>
+                                <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <table ng-table="tableParams" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
-                    <tr ng-repeat="condition in conditions">
+                    <tr ng-repeat="condition in $data">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'Name'"
-                            filter="{'name':'text'}"
-                            sortable="'name'">
+                            filter="{'title':'text'}"
+                            sortable="'title'">
                             <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
                             <pre class="row-desc" ng-bind-html="condition.conditionText"></pre>
                             <div class="tag-list">
@@ -52,6 +48,11 @@
                             filter="{'agency':'text'}"
                             sortable="'agency'">{{condition.agency}}</td>
                     </tr>
+                    <tr ng-if="!$data || $data.length === 0">
+                        <td colspan="2">
+                            No records found.
+                        </td>
+                    </tr>
                 </table>
             </section>
 
@@ -63,16 +64,26 @@
                 <div class="card-block">
                     <div class="form-group">
                         <label class="control-label">Projects (Mines)</label>
-                        <input class="form-control" type="text" />
+                        <input class="form-control" type="text" ng-model="project.name" disabled />
                     </div>
                     <div class="form-group">
                         <label class="control-label">Keywords</label>
-                        <input class="form-control" type="text" />
+                        <input class="form-control" type="text" ng-model="keywords"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Environment</label>
+                        <input class="form-control" type="checkbox" ng-model="topicEnvironment"/>
+                        <label class="control-label">Communities</label>
+                        <input class="form-control" type="checkbox" ng-model="topicCommunities"/>
+                        <label class="control-label">Heritage</label>
+                        <input class="form-control" type="checkbox" ng-model="topicHeritage"/>
+                        <label class="control-label">Health & Safety</label>
+                        <input class="form-control" type="checkbox" ng-model="topicHealth"/>
                     </div>
                     <div class="buttons">
                         <ul class="clearfix">
-                            <li><button class="btn btn-default">Clear</button></li>
-                            <li><button class="btn btn-primary">Apply</button></li>
+                            <li><button class="btn btn-default" ng-click="clearFilter()">Clear</button></li>
+                            <li><button class="btn btn-primary" ng-click="applyFilter()">Apply</button></li>
                         </ul>
                     </div>
                 </div>
