Fixing up styling / markup for filter mechanisms on actions-main.html and conditions-main.html

--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -243,7 +243,7 @@ main {
         }
     }
     .buttons {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
 
         button {
             font-size: 0.875rem;
@@ -339,4 +339,18 @@ main {
         float: left;
         font-weight: normal !important;
     }
+}
+
+.pagination {
+    li {
+        display: inline-block;
+
+        a {
+            padding: 1rem;
+        }
+    }
+}
+
+.ng-table-counts {
+    display: none;
 }
