--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container conditions">
 
      <div class="breadcrumbs">
          <a ui-sref="projects">MEM</a>
@@ -15,6 +15,48 @@
         <h1>Project Conditions</h1>
     </div>
     <div class="row">
+
+        <aside class="col-sm-12 col-md-5 col-lg-4">
+
+            <section class="card">
+                <h2 class="card-title">Filter Conditions</h2>
+                <div class="card-block">
+                    <div class="form-group">
+                        <label class="control-label">Projects (Mines)</label>
+                        <input class="form-control" type="text" ng-model="project.name" disabled />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Keywords</label>
+                        <input class="form-control" type="text" ng-model="keywords"/>
+                    </div>
+                    <div class="form-group">
+                        <label>Topics</label>
+                        <div class="checkbox-temp clearfix">
+                            <label class="checkbox">
+                                <input type="checkbox" ng-model="topicEnvironment"/> Environment
+                            </label>
+                            <label class="checkbox">
+                                <input type="checkbox" ng-model="topicCommunities"/> Communities
+                            </label>
+                            <label class="control-label">
+                                <input type="checkbox" ng-model="topicHeritage"/> Heritage
+                            </label>
+                            <label class="control-label">
+                                <input type="checkbox" ng-model="topicHealth"/> Health and Safety
+                            </label>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <ul class="clearfix">
+                            <li><button class="btn btn-default" ng-click="clearFilter()">Clear</button></li>
+                            <li><button class="btn btn-primary" ng-click="applyFilter()">Apply</button></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            
+        </aside>
+
         <main class="col-sm-12 col-md-7 col-lg-8">
         
             <section>
@@ -57,38 +99,5 @@
             </section>
 
         </main>
-        <aside class="col-sm-12 col-md-5 col-lg-4">
-
-            <section class="card">
-                <h2 class="card-title">Filter Conditions</h2>
-                <div class="card-block">
-                    <div class="form-group">
-                        <label class="control-label">Projects (Mines)</label>
-                        <input class="form-control" type="text" ng-model="project.name" disabled />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Keywords</label>
-                        <input class="form-control" type="text" ng-model="keywords"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Environment</label>
-                        <input class="form-control" type="checkbox" ng-model="topicEnvironment"/>
-                        <label class="control-label">Communities</label>
-                        <input class="form-control" type="checkbox" ng-model="topicCommunities"/>
-                        <label class="control-label">Heritage</label>
-                        <input class="form-control" type="checkbox" ng-model="topicHeritage"/>
-                        <label class="control-label">Health & Safety</label>
-                        <input class="form-control" type="checkbox" ng-model="topicHealth"/>
-                    </div>
-                    <div class="buttons">
-                        <ul class="clearfix">
-                            <li><button class="btn btn-default" ng-click="clearFilter()">Clear</button></li>
-                            <li><button class="btn btn-primary" ng-click="applyFilter()">Apply</button></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            
-        </aside>
     </div>
 </div>
