--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -75,7 +75,8 @@
                             data-title="'Name'"
                             filter="{'orderId':'text'}"
                             sortable="'orderId'">
-                            <a ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                            <a ng-show="action.documentUrl !== ''" ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                            <a ng-show="action.documentUrl === ''" disabled ui-sref="#">{{action.type}} Issued: {{action.orderId}}</a>
                             <pre class="row-desc" ng-bind-html="action.text"></pre>
                             <div class="tag-list">
                                 <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
