--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -57,28 +57,25 @@
             <section>
                 <h2>Inspection Actions</h2>
                 <div class="title-bar">
-                    <h3>Viewing {{inspectionActions.length}} of {{inspectionActions.length}} Actions</h3>
+                    <h3>Viewing {{tableParams.total()}} of {{inspectionActions.length}} Actions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
-                                <select class="form-control">
-                                    <option>10</option>
-                                    <option>25</option>
-                                    <option>50</option>
-                                </select>
+                                <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <table ng-table="tableParams" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
-                    <tr ng-repeat="action in inspectionActions">
+                    <tr ng-repeat="action in $data">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'ID'"
-                            filter="{'actionID':'text'}"
-                            sortable="'actionID'">
-                            <a ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                            filter="{'orderId':'text'}"
+                            sortable="'orderId'">
+                            <a ng-show="action.documentUrl !== ''" ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                            <a ng-show="action.documentUrl === ''" disabled ui-sref="#">{{action.type}} Issued: {{action.orderId}}</a>
                             <pre class="row-desc" ng-bind-html="action.text"></pre>
                             <div class="tag-list">
                                 <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
@@ -87,8 +84,13 @@
                         <td class="date-col" 
                             header-class="'date-col'" 
                             data-title="'Date'"
-                            filter="{'inspectionID':'text'}"
-                            sortable="'inspectionID'">{{action.issuedDate}}</td>
+                            filter="{'issuedDate':'text'}"
+                            sortable="'issuedDate'">{{action.issuedDate}}</td>
+                    </tr>
+                    <tr ng-if="!$data || $data.length === 0">
+                        <td colspan="2">
+                            No records found.
+                        </td>
                     </tr>
                 </table>
         </section>
