--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -78,7 +78,8 @@
                             data-title="'Name'"
                             filter="{'title':'text'}"
                             sortable="'title'">
-                            <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                            <a ng-show="condition.detailPage === 'Y'" ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                            <a ng-show="condition.detailPage !== 'Y'" disabled ui-sref="#">{{condition.title}}</a>
                             <pre class="row-desc" ng-bind-html="condition.conditionText"></pre>
                             <div class="tag-list">
                                 <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic}}</span>
