--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -38,14 +38,15 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="conditions" role="tabpanel">
                         
-                        <table ng-table="tableParams" class="conditions-grid ce-grid table table-striped table-hover" show-filter="false">
-                            <tr ng-repeat="condition in subtopic.conditions">
+                        <table ng-table="tableParams1" class="conditions-grid ce-grid table table-striped table-hover" show-filter="false">
+                            <tr ng-repeat="condition in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
                                     data-title="'Name'"
-                                    filter="{'name':'text'}"
-                                    sortable="'name'">
-                                    <a ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                                    filter="{'title':'text'}"
+                                    sortable="'title'">
+                                    <a ng-show="condition.detailPage === 'Y'" ui-sref="admin.prototype.condition({conditionId: condition.conditionId})">{{condition.title}}</a>
+                                    <a ng-show="condition.detailPage !== 'Y'" disabled ui-sref="#">{{condition.title}}</a>
                                     <pre class="row-desc" ng-bind-html="condition.conditionText"></pre>
                                     <div class="tag-list">
                                         <span class="tag tag-default" ng-repeat="topic in condition.topics">{{topic}}</span>
@@ -57,18 +58,24 @@
                                     filter="{'agency':'text'}"
                                     sortable="'agency'">{{condition.agency}}</td>
                             </tr>
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="2">
+                                    No records found.
+                                </td>
+                            </tr>
                         </table>
 
                     </div>
                     <div class="tab-pane" id="inspections" role="tabpanel">
-                        <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                            <tr ng-repeat="inspection in subtopic.inspections">
+                        <table ng-table="tableParams2" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
+                            <tr ng-repeat="inspection in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
                                     data-title="'ID'"
                                     filter="{'inspectionID':'text'}"
                                     sortable="'inspection._id'">
-                                    <a ui-sref="admin.prototype.inspection({inspectionId:inspection.inspectionId})">{{inspection.inspectionId}} ({{inspection.agency}}) </a>
+                                    <a ng-show="inspection.detailPage === 'Y'" ui-sref="admin.prototype.inspection({inspectionId:inspection.inspectionId})">{{inspection.inspectionId}} ({{inspection.agency}}) </a>
+                                    <a ng-show="inspection.detailPage !== 'Y'" ui-sref="#">{{inspection.inspectionId}} ({{inspection.agency}}) </a>
                                     <div class="tag-list">
                                         <span class="tag tag-default" ng-repeat="topic in inspection.topics">{{topic}}</span>
                                     </div>
@@ -81,20 +88,26 @@
                                 <td class="followup-col" 
                                     header-class="'followup-col'" 
                                     data-title="'Recent Follow Up'"
-                                    filter="{'inspection.date':'text'}"
-                                    sortable="'inspection.date'">{{inspection.followupType}}</td>
+                                    filter="{'followupType':'text'}"
+                                    sortable="'followupType'">{{inspection.followupType}}</td>
+                            </tr>
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="3">
+                                    No records found.
+                                </td>
                             </tr>
                         </table>
                     </div>
                     <div class="tab-pane" id="actions" role="tabpanel">
-                        <table ng-table="tableParams" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
-                            <tr ng-repeat="action in subtopic.actions">
+                        <table ng-table="tableParams3" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
+                            <tr ng-repeat="action in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
                                     data-title="'ID'"
-                                    filter="{'name':'text'}"
-                                    sortable="'name'">
-                                    <a ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                                    filter="{'orderId':'text'}"
+                                    sortable="'orderId'">
+                                    <a ng-show="action.documentUrl !== ''" ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                                    <a ng-show="action.documentUrl === ''" disabled ui-sref="#">{{action.type}} Issued: {{action.orderId}}</a>
                                     <pre class="row-desc" ng-bind-html="action.text"></pre>
                                     <div class="tag-list">
                                         <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
@@ -105,6 +118,11 @@
                                     data-title="'Date'"
                                     filter="{'issueDate':'text'}"
                                     sortable="'issueDate'">{{action.issuedDate}}</td>
+                            </tr>
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="2">
+                                    No records found.
+                                </td>
                             </tr>
                         </table>
                     </div>
