--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
 
-                <table ng-table="tableParams" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
+                <table ng-table="tableParams" class="actions-grid ce-grid table table-striped" show-filter="false">
                     <tr ng-repeat="action in $data">
                         <td class="id-col"
                             header-class="'id-col'"
