--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
+                    <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped" show-filter="false">
                         <tr ng-repeat="inspection in project.inspections">
                             <td class="id-col"
                                 header-class="'id-col'"
