--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -24,8 +24,8 @@
 
             <section>
                 <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#conditions" role="tab">Conditions</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" data-toggle="tab" href="#conditions" role="tab">Conditions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#inspections" role="tab">Inspections</a>
@@ -37,8 +37,21 @@
 
                 <div class="tab-content">
                     <div class="tab-pane active" id="conditions" role="tabpanel">
-                        
-                        <table ng-table="tableParams1" class="conditions-grid ce-grid table table-striped table-hover" show-filter="false">
+                        <div class="title-bar">
+                            <h3>Conditions Count</h3>
+                            <div class="filters">
+                                <div class="form-inline">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option selected>10</option>
+                                            <option>25</option>
+                                            <option>50</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <table ng-table="tableParams1" class="conditions-grid ce-grid table table-striped" show-filter="false">
                             <tr ng-repeat="condition in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
@@ -67,7 +80,21 @@
 
                     </div>
                     <div class="tab-pane" id="inspections" role="tabpanel">
-                        <table ng-table="tableParams2" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
+                        <div class="title-bar">
+                            <h3>Inspections Count</h3>
+                            <div class="filters">
+                                <div class="form-inline">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option selected>10</option>
+                                            <option>25</option>
+                                            <option>50</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <table ng-table="tableParams2" class="inspections-grid ce-grid table table-striped" show-filter="false">
                             <tr ng-repeat="inspection in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
@@ -99,7 +126,21 @@
                         </table>
                     </div>
                     <div class="tab-pane" id="actions" role="tabpanel">
-                        <table ng-table="tableParams3" class="actions-grid ce-grid table table-striped table-hover" show-filter="false">
+                        <div class="title-bar">
+                            <h3>Actions Count</h3>
+                            <div class="filters">
+                                <div class="form-inline">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option selected>10</option>
+                                            <option>25</option>
+                                            <option>50</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <table ng-table="tableParams3" class="actions-grid ce-grid table table-striped" show-filter="false">
                             <tr ng-repeat="action in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
