Prototype Development - removed placeholder text from footer in prototype.layout.view.html - Updated styling for grid pagination control - Removed the group binding for project authorizations on project-main.html

--- a/modules/core/server/views/prototype.layout.view.html
+++ b/modules/core/server/views/prototype.layout.view.html
@@ -34,7 +34,7 @@
 	</header>
 	{% block content %}{% endblock %}
 	<footer>
-		<div class="container">Footer</div>
+		<div class="container">&nbsp;</div>
 	</footer>
 
 	<!--Embedding The User Object-->
