--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -145,7 +145,7 @@
                             <i class="material-icons md-18">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" ng-href="{{inspection.followupDocumentUrl}}">Mine Manager's Response - {{inspection.inspectionId}}</a>
+                            <a class="primary" ng-href="{{inspection.followupDocumentUrl}}" target="_blank">Mine Manager's Response - {{inspection.inspectionId}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
