--- a/modules/prototype/client/styles/components/authorization-blocks.scss
+++ b/modules/prototype/client/styles/components/authorization-blocks.scss
@@ -1,5 +1,12 @@
 
 .authorization-blocks {
+    color: #2b5580;
+
+    .secondary {
+        margin-top: 0.1rem;
+        opacity: 0.65;
+    }
+
     &.resource-list {
         .list-group-item {
             @include flex-direction(column);
@@ -7,7 +14,6 @@
 
             .details {
                 margin-top: 0.5rem;
-                font-weight: bold;
 
                 span {
                     display: inline-block;
