--- a/modules/prototype/client/styles/components/ce-grid.scss
+++ b/modules/prototype/client/styles/components/ce-grid.scss
@@ -34,7 +34,6 @@
 
             a {
                 font-weight: bold;
-                text-decoration: underline;
             }
         }
     }
@@ -57,6 +56,7 @@
 
         p {
             margin: 0.5rem 0;
+            line-height: 1rem;
         }
     }
 
