--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -28,7 +28,7 @@
                             <i class="material-icons">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" ng-href="{{inspection.documentUrl}}" target="_blank">Download Inspection Report - {{inspection.inspectionId}}</a>
+                            <a class="primary" href="{{inspection.documentUrl}}" target="_blank">Download Inspection Report - {{inspection.inspectionId}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons">file_download</i>
@@ -45,7 +45,7 @@
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
                             <span class="title">
-                                <a class="primary" ng-href="{{inspection.followupDocumentUrl}}">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
+                                <a class="primary" href="{{inspection.followupDocumentUrl}}">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
                             </span>
                             <span class="actions">
                                 <i class="material-icons">file_download</i>
