--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -57,7 +57,17 @@
             <section>
                 <h2>Inspection Actions</h2>
                 <div class="title-bar">
-                    <h3>Viewing {{tableParams.total()}} of {{inspectionActions.length}} Actions</h3>
+                    <!--
+                    <ul>
+                        <li>page = {{tableParamsStats.currentPage}}</li>
+                        <li>of pages = {{tableParamsStats.totalPages}}</li>
+                        <li>from record = {{tableParamsStats.first}}</li>
+                        <li>to record = {{tableParamsStats.last}}</li>
+                        <li>total records = {{tableParamsStats.totalCount}}</li>
+                        <li>filtered records = {{tableParamsStats.filteredCount}}</li>
+                    </ul>
+                    -->
+                    <h3>Showing {{tableParamsStats.first}} - {{tableParamsStats.last}} of {{tableParamsStats.totalCount}}</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
