--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -50,22 +50,28 @@
             </section>
             <section>
                 <h2>Inspections</h2>
-                    <div class="title-bar">
-                        <h3>Viewing {{project.inspections.length}} of {{project.inspections.length}} inspections</h3>
+                <!--
+			   <ul>
+				   <li>page = {{tableParamsStats.currentPage}}</li>
+				   <li>of pages = {{tableParamsStats.totalPages}}</li>
+				   <li>from record = {{tableParamsStats.first}}</li>
+				   <li>to record = {{tableParamsStats.last}}</li>
+				   <li>total records = {{tableParamsStats.totalCount}}</li>
+				   <li>filtered records = {{tableParamsStats.filteredCount}}</li>
+			   </ul>
+			   -->
+                <div class="title-bar">
+                        <h3>Showing {{tableParamsStats.first}} - {{tableParamsStats.last}} of {{tableParamsStats.totalCount}}</h3>
                         <div class="filters">
                             <div class="form-inline">
                                 <div class="form-group">
-                                    <select class="form-control">
-                                        <option selected>10</option>
-                                        <option>25</option>
-                                        <option>50</option>
-                                    </select>
+                                    <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped" show-filter="false">
-                        <tr ng-repeat="inspection in project.inspections">
+                        <tr ng-repeat="inspection in $data">
                             <td class="id-col"
                                 header-class="'id-col'"
                                 data-title="'ID'"
