PROTOTYPE: allow /actions through, fix ce sorting

--- a/modules/prototype/client/views/actions-main.html
+++ b/modules/prototype/client/views/actions-main.html
@@ -68,7 +68,7 @@
                         <li>filtered records = {{tableParamsStats.filteredCount}}</li>
                     </ul>
                     -->
-                    <h3>Viewing {{tableParams.total()}} of {{actions.length}}</h3>
+                    <h3>Showing {{tableParamsStats.first}} - {{tableParamsStats.last}} of {{tableParamsStats.totalCount}}</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
